--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        agpVersion = '7.2.1'
+        kotlinVersion = '1.6.21'
+        coroutinesVersion = '1.6.2'
+        androidCoreVersion = '1.8.0'
+        jUnitVersion = '4.13.2'
+        spotlessVersion = '6.7.2'
+        mavenPublishVersion = '0.20.0'
+        ktlintVersion = '0.45.2'
+    }
+}
+
 plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'com.android.application' version "$agpVersion" apply false
+    id 'com.android.library' version "$agpVersion" apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlinVersion" apply false
+    id 'com.diffplug.spotless' version "$spotlessVersion" apply false
+}
+
+subprojects {
+    apply plugin: 'com.diffplug.spotless'
+    spotless {
+        kotlin {
+            target '**/*.kt'
+            targetExclude("$buildDir/**/*.kt")
+            targetExclude('bin/**/*.kt')
+
+            ktlint(ktlintVersion)
+            licenseHeaderFile rootProject.file('spotless/copyright.kt')
+        }
+    }
 }
 
 task clean(type: Delete) {
