--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         agpVersion = '7.2.1'
         kotlinVersion = '1.6.21'
         coroutinesVersion = '1.6.2'
-        androidCoreVersion = '1.8.0'
+        appCompatVersion = '1.4.2'
         jUnitVersion = '4.13.2'
         spotlessVersion = '6.7.2'
         mavenPublishVersion = '0.20.0'
