--- a/permissionFlow/build.gradle
+++ b/permissionFlow/build.gradle
@@ -30,13 +30,10 @@ android {
 }
 
 dependencies {
+    implementation "androidx.appcompat:appcompat:$appCompatVersion"
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
 
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.2")
-
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation "junit:junit:$jUnitVersion"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
