--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         coroutinesVersion = '1.6.2'
         appCompatVersion = '1.4.2'
         jUnitVersion = '4.13.2'
+        mockkVersion = '1.12.4'
         spotlessVersion = '6.7.2'
         mavenPublishVersion = '0.20.0'
         ktlintVersion = '0.45.2'
