--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         appCompatVersion = '1.4.2'
         jUnitVersion = '4.13.2'
         mockkVersion = '1.12.4'
+        turbineVersion = '0.8.0'
         spotlessVersion = '6.7.2'
         mavenPublishVersion = '0.20.0'
         ktlintVersion = '0.45.2'
