--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         spotlessVersion = '6.7.2'
         mavenPublishVersion = '0.20.0'
         ktlintVersion = '0.45.2'
+        koverVersion = "0.5.0"
     }
 }
 
@@ -19,6 +20,7 @@ plugins {
     id 'com.android.library' version "$agpVersion" apply false
     id 'org.jetbrains.kotlin.android' version "$kotlinVersion" apply false
     id 'com.diffplug.spotless' version "$spotlessVersion" apply false
+    id("org.jetbrains.kotlinx.kover") version "$koverVersion" apply false
 }
 
 subprojects {
