--- a/permissionFlow/build.gradle
+++ b/permissionFlow/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlinx.kover'
+    id 'com.vanniktech.maven.publish'
 }
 
 android {
