--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ plugins {
     id 'com.android.application' version "$agpVersion" apply false
     id 'com.android.library' version "$agpVersion" apply false
     id 'org.jetbrains.kotlin.android' version "$kotlinVersion" apply false
+    id 'org.jetbrains.dokka' version "$kotlinVersion" apply false
     id 'com.diffplug.spotless' version "$spotlessVersion" apply false
     id("org.jetbrains.kotlinx.kover") version "$koverVersion" apply false
     id("com.vanniktech.maven.publish") version "$mavenPublishVersion" apply false
