--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,24 @@ android {
 
     buildFeatures {
         viewBinding true
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion composeVersion
+    }
+
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
 dependencies {
     // Library
     implementation(project(":permissionFlow"))
+    implementation(project(":permissionFlowCompose"))
 
     // Android
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -45,6 +57,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    // Jetpack Compose
+    implementation "androidx.activity:activity-compose:$activityVersion"
+    implementation "androidx.compose.material:material:$composeVersion"
+    implementation "androidx.compose.runtime:runtime:$composeVersion"
+    implementation "androidx.compose.animation:animation:$composeVersion"
+    implementation "androidx.compose.ui:ui-tooling:$composeVersion"
 
     // Lifecycle
     def lifecycleVersion = "2.5.0-rc02"
