--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
     id 'com.android.application' version "$agpVersion" apply false
     id 'com.android.library' version "$agpVersion" apply false
     id 'org.jetbrains.kotlin.android' version "$kotlinVersion" apply false
-    id 'org.jetbrains.dokka' version "$kotlinVersion" apply false
+    id 'org.jetbrains.dokka' version "$kotlinVersion"
     id 'com.diffplug.spotless' version "$spotlessVersion" apply false
     id("org.jetbrains.kotlinx.kover") version "$koverVersion" apply false
     id("com.vanniktech.maven.publish") version "$mavenPublishVersion" apply false
@@ -44,4 +44,10 @@ subprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+apply plugin: 'org.jetbrains.dokka'
+
+tasks.dokkaHtmlMultiModule.configure {
+    outputDirectory.set(project.mkdir("docs"))
 }
