Add name and description for modules; fix warnings in PermissionWatchmen.kt

--- a/permission-flow-compose/gradle.properties
+++ b/permission-flow-compose/gradle.properties
@@ -1,1 +1,3 @@
 POM_ARTIFACT_ID=permission-flow-compose
+POM_NAME=Permission Flow for Android and Jetpack Compose
+POM_DESCRIPTION=Know about real-time state of a Android app Permissions with Jetpack Compose APIs.
