--- a/permission-flow/gradle.properties
+++ b/permission-flow/gradle.properties
@@ -1,1 +1,3 @@
 POM_ARTIFACT_ID=permission-flow-android
+POM_NAME=Permission Flow for Android
+POM_DESCRIPTION=Know about real-time state of a Android app Permissions with Kotlin Flow APIs.
