Add dokka config in permisison-flow module

--- a/permission-flow/build.gradle
+++ b/permission-flow/build.gradle
@@ -67,3 +67,10 @@ tasks.koverHtmlReport {
     htmlReportDir.set(layout.buildDirectory.dir("coverageReport/html"))
 }
 
+dokkaHtml.configure {
+    dokkaSourceSets {
+        named("main") {
+            noAndroidSdkLink.set(false)
+        }
+    }
+}
