--- a/permission-flow/src/main/AndroidManifest.xml
+++ b/permission-flow/src/main/AndroidManifest.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="dev.shreyaspatil.permissionFlow">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="dev.shreyaspatil.permissionFlow">
 
+    <application>
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+
+            <meta-data
+                android:name="dev.shreyaspatil.permissionFlow.initializer.PermissionFlowInitializer"
+                android:value="androidx.startup" />
+        </provider>
+    </application>
 </manifest>
