Migrate to AGP 7.4.2

--- a/permission-flow-compose/build.gradle
+++ b/permission-flow-compose/build.gradle
@@ -44,6 +44,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'dev.shreyaspatil.permissionflow.compose'
 }
 
 dependencies {
