--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'dev.shreyaspatil.permissionFlow.example'
 }
 
 dependencies {
@@ -52,9 +53,9 @@ dependencies {
     implementation(project(":permission-flow-compose"))
 
     // Android
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.fragment:fragment-ktx:1.4.1'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.6'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
@@ -66,7 +67,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$composeVersion"
 
     // Lifecycle
-    def lifecycleVersion = "2.5.0-rc02"
+    def lifecycleVersion = '2.6.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
 
