--- a/permission-flow-compose/build.gradle
+++ b/permission-flow-compose/build.gradle
@@ -36,7 +36,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion composeVersion
+        kotlinCompilerExtensionVersion composeCompilerVersion
     }
 
     packagingOptions {
