Enable automatic release on sonatype

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ android.nonTransitiveRClass=true
 
 SONATYPE_HOST=DEFAULT
 RELEASE_SIGNING_ENABLED=true
+SONATYPE_AUTOMATIC_RELEASE=true
 
 GROUP=dev.shreyaspatil.permission-flow
 VERSION_NAME=1.0.0-rc01
