--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,13 +31,8 @@ jobs:
 
       - name: Publish Library
         run: |
-          echo "Publishing library🚀"
-          ./gradlew publish --no-daemon --no-parallel
-          echo "Published✅"
-
-          echo "Releasing repository...🚀"
-          ./gradlew closeAndReleaseRepository
-          echo "Released✅"
+          echo "Publishing library 🚀"
+          ./gradlew publishAllPublicationsToMavenCentral --no-configuration-cache
         env:
           ORG_GRADLE_PROJECT_VERSION_NAME: ${{ github.event.inputs.versionName }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_KEY }}
