--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,10 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 android.useAndroidX=true
-kotlin.code.style=official
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
 android.nonTransitiveRClass=true
+kotlin.code.style=official
 
 # Library configuration
 
