Update compile Sdk version and use compose BoM

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "dev.shreyaspatil.permissionFlow.example"
         minSdk 21
-        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -53,28 +52,29 @@ dependencies {
     implementation(project(":permission-flow-compose"))
 
     // Android
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.fragment:fragment-ktx:1.5.6'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Jetpack Compose
+    implementation platform("androidx.compose:compose-bom:$composeBomVersion")
     implementation "androidx.activity:activity-compose:$activityVersion"
-    implementation "androidx.compose.material:material:$composeVersion"
-    implementation "androidx.compose.runtime:runtime:$composeVersion"
-    implementation "androidx.compose.animation:animation:$composeVersion"
-    implementation "androidx.compose.ui:ui-tooling:$composeVersion"
+    implementation "androidx.compose.material:material"
+    implementation "androidx.compose.runtime:runtime"
+    implementation "androidx.compose.animation:animation"
+    implementation "androidx.compose.ui:ui-tooling"
 
     // Lifecycle
-    def lifecycleVersion = '2.6.1'
+    def lifecycleVersion = '2.7.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
 
 
     // Coroutines
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0')
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0')
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
