--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ subprojects {
             targetExclude("$buildDir/**/*.kt")
             targetExclude('bin/**/*.kt')
 
-            ktlint().editorConfigOverride(["ktlint_standard_function-naming": "disabled"])
+            ktfmt().dropboxStyle()
             licenseHeaderFile rootProject.file('spotless/copyright.kt')
         }
     }
