--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,12 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          java-version: 17
+          distribution: temurin
+          cache: gradle
           
       - name: Grant Permission to Execute
         run: chmod +x gradlew
