--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -27,10 +31,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.composePermission.ComposePermissionActivity"/>
-        <activity android:name=".ui.multipermission.MultiPermissionActivity"/>
-        <activity android:name=".ui.contacts.ContactsActivity"/>
-        <activity android:name=".ui.fragment.ExampleFragmentActivity"/>
+        <activity android:name=".ui.composePermission.ComposePermissionActivity" />
+        <activity android:name=".ui.multipermission.MultiPermissionActivity" />
+        <activity android:name=".ui.contacts.ContactsActivity" />
+        <activity android:name=".ui.fragment.ExampleFragmentActivity" />
     </application>
 
 </manifest>
