--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: build dokkaHtmlMultiModule koverHtmlReport
+          arguments: build dokkaHtmlMultiModule koverHtmlReportDebug
 
       - name: Publish Library
         run: |
