Update build workflow: update command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: build koverXmlReport --stacktrace
+          arguments: build koverXmlReportDebug --stacktrace
         
       - name: Upload Coverage report to CodeCov
         uses: codecov/codecov-action@v2
