--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         jUnitVersion = '4.13.2'
         robolectricVersion = "4.11.1"
         mockkVersion = '1.13.10'
+        androidxCoreTestingVersion = '1.5.0'
         turbineVersion = '1.0.0'
         spotlessVersion = '6.25.0'
         koverVersion = "0.5.1"
