Use kotlin compose compiler plugin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,15 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.compose'
+}
+
+kotlin {
+    jvmToolchain(17)
 }
 
 android {
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "dev.shreyaspatil.permissionFlow.example"
@@ -21,21 +26,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
 
     buildFeatures {
         viewBinding true
         compose true
-    }
-
-    composeOptions {
-        kotlinCompilerExtensionVersion composeCompilerVersion
     }
 
     packagingOptions {
@@ -52,11 +46,11 @@ dependencies {
     implementation(project(":permission-flow-compose"))
 
     // Android
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.fragment:fragment-ktx:1.6.2'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'androidx.fragment:fragment-ktx:1.8.6'
+    implementation "androidx.appcompat:appcompat:$appCompatVersion"
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
 
     // Jetpack Compose
     implementation platform("androidx.compose:compose-bom:$composeBomVersion")
@@ -67,14 +61,14 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling"
 
     // Lifecycle
-    def lifecycleVersion = '2.7.0'
+    def lifecycleVersion = '2.8.7'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
 
 
     // Coroutines
-    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0')
-    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0')
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion")
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
