--- a/permission-flow/build.gradle
+++ b/permission-flow/build.gradle
@@ -6,8 +6,12 @@ plugins {
     id 'org.jetbrains.dokka'
 }
 
+kotlin {
+    jvmToolchain(17)
+}
+
 android {
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         minSdk 21
@@ -21,13 +25,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
 
     buildFeatures {
